# backend_fashion_app/internal/modules/auth/entities/user.go
@@ -17,14 +17,15 @@ const (
 )
 
 type User struct {
-	ID        uint
-	Email     string
-	Password  string
-	Role      Role
-	Provider  Provider
-	GoogleSub *string // Thay đổi thành pointer để có thể là NULL
-	CreatedAt time.Time
-	UpdatedAt time.Time
+	ID          uint
+	Email       string
+	Password    string
+	PhoneNumber string `json:"phone_number" gorm:"column:phone_number"`
+	Role        Role
+	Provider    Provider
+	GoogleSub   *string // Thay đổi thành pointer để có thể là NULL
+	CreatedAt   time.Time
+	UpdatedAt   time.Time
 }
 
 func (u *User) IsShop() bool     { return u.Role == RoleShop }
