# backend_fashion_app/internal/modules/auth/repositories/models.go
@@ -3,14 +3,15 @@ package repositories
 import "time"
 
 type UserModel struct {
-	ID        uint    `gorm:"primaryKey"`
-	Email     string  `gorm:"size:255;uniqueIndex"`
-	Password  string  `gorm:"size:255"`
-	Role      string  `gorm:"size:20;index"`
-	Provider  string  `gorm:"size:20;index"`
-	GoogleSub *string `gorm:"size:64;uniqueIndex"`
-	CreatedAt time.Time
-	UpdatedAt time.Time
+	ID          uint    `gorm:"primaryKey"`
+	Email       string  `gorm:"size:255;uniqueIndex"`
+	Password    string  `gorm:"size:255"`
+	PhoneNumber string  `gorm:"size:20;uniqueIndex"`
+	Role        string  `gorm:"size:20;index"`
+	Provider    string  `gorm:"size:20;index"`
+	GoogleSub   *string `gorm:"size:64;uniqueIndex"`
+	CreatedAt   time.Time
+	UpdatedAt   time.Time
 }
 
 func (UserModel) TableName() string { return "users" }
