# backend_fashion_app/internal/modules/profile/entities/customer_profile.go
@@ -1,10 +1,9 @@
 package entities
 
 type CustomerProfile struct {
-	UserID    uint
-	FullName  string
-	Gender    string
-	Birthdate string
-	HeightCM  int16
-	WeightKG  float32
+	UserID   uint
+	FullName string
+	Age      int
+	Gender   string
+	Address  string
 }
